update cat controller
