# src/routes/api.php
@@ -17,8 +17,8 @@ use Illuminate\Support\Facades\Route;
 Route::group(['middleware' => ['auth:sanctum']], function () {
     Route::get('/me', App\Http\Controllers\MeController::class)->name('user.me');
 
-//    Route::apiResource('cats', App\Http\Controllers\CatController::class)
-//        ->except(['create', 'edit']);
+    Route::apiResource('cats', App\Http\Controllers\CatController::class)
+        ->except(['create', 'edit']);
 //    Route::apiResource('feeds', App\Http\Controllers\FeedController::class)
 //        ->except(['create', 'edit']);
 //    Route::apiResource('food_catalogs', App\Http\Controllers\FoodCatalogController::class)
